# cpp-simple-wxwidgets

./: .gitignore  CMakeLists.txt  README.md  main.h  simple.cpp  simple.h
examples/simple-analog-clock/: CMakeLists.txt  clockPanel.cpp  clockPanel.h  clockdc.cpp  clockdc.h  clockgc.cpp  clockgc.h  dialog.cpp  dialog.h
examples/simple-analog-clock-antialiasing/: CMakeLists.txt  clockPanel.cpp  clockPanel.h  dialog.cpp  main.cpp
examples/simple-context-menu/: CMakeLists.txt  dialog.cpp  dialog.h  id.h  main.cpp  main.h
examples/simple-dialog/: CMakeLists.txt  dialog.cpp  dialog.h  main.cpp
examples/simple-frame/: CMakeLists.txt  frame.cpp  frame.h  main.cpp  main.h  resource.rc
examples/simple-image-panel/: CMakeLists.txt  dialog.cpp  dialog.h  imagePanel.cpp  imagePanel.h  main.cpp
examples/simple-menu/: CMakeLists.txt  main.cpp  menu.cpp  menu.h
examples/simple-menu-bar/: CMakeLists.txt  frame.cpp  frame.h  main.cpp  menu.cpp  resource.rc
