cmake_minimum_required(VERSION 2.6)
project(All)

add_subdirectory(examples/simple-dialog)
add_subdirectory(examples/simple-frame)
add_subdirectory(examples/simple-menu-bar)
add_subdirectory(examples/simple-context-menu)
add_subdirectory(examples/simple-image-panel)
add_subdirectory(examples/simple-analog-clock)
